--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -17,8 +17,12 @@ img
   width: 100%
 
 .swiper-container
-  width: 92%
+  // max-width: 1200px
   height: 450px
+  // background-color: #fff
+
+
+
 
 .hidden
   overflow: hidden
