--- a/sass/blocks/_company.sass
+++ b/sass/blocks/_company.sass
@@ -4,9 +4,6 @@
   &-container
     max-width: 1170px
     margin: auto
-    display: flex
-    justify-content: center
-    width: 100%
   &__title
     font-style: normal
     font-weight: bold
@@ -43,3 +40,26 @@
       height: max-content
       bottom: -125px
       text-align: center
+  &__description
+    padding: 20px
+    max-width: 100%
+    margin: auto
+    margin-top: 40px
+    background-color: #fff
+  &__list
+    letter-spacing: 1.3px
+    margin-bottom: 20px
+  &__item 
+    margin-top: 15px
+    color: $primary
+    font-weight: lighter
+  &__info
+    padding: 20px
+    max-width: 100%
+    margin: auto
+    margin-top: 180px
+    background-color: #fff  
+  &__images
+    &-wrapper 
+      margin-top: 40px  
+
