--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -29,13 +29,6 @@
 .menu-button
   display: none
 
-.navbar
-  &__dropdown
-    min-width: 160px
-    display: none
-    &--show
-      display: block
-
 .dropdown
   display: none
   width: 200px
@@ -45,10 +38,10 @@
     color: $primary
     margin-bottom: 10px
     border-bottom: 1px solid rgba(25, 60, 88, 0.3)
-.show
-  display: flex
-  padding: 14px 20px
-  flex-direction: column
-  position: absolute
-  background-color: #fff
-  z-index: 99
+// .show
+//   display: flex
+//   padding: 14px 20px
+//   flex-direction: column
+//   position: absolute
+//   background-color: #fff
+//   z-index: 99
