--- a/sass/blocks/_methods.sass
+++ b/sass/blocks/_methods.sass
@@ -13,6 +13,7 @@
     margin: auto
     border-bottom: 1px solid hsla(206, 56, 22 , .3 )
     max-width: max-content
+    
   &-slide
     display: flex
     justify-content: space-evenly
@@ -26,6 +27,7 @@
   &__text
     line-height: 2.7
     margin-bottom: 20px
+    letter-spacing: -0.5px;
     &-wrapper
       flex-basis: 60%
     &-title
