--- a/sass/style.sass
+++ b/sass/style.sass
@@ -43,5 +43,8 @@
 //styles for contact-page
 @import 'blocks/_methods'
 
+//styles for technologies
+@import 'blocks/_technologies'
+
 //responsive
 @import '_media'
