--- a/sass/blocks/_company.sass
+++ b/sass/blocks/_company.sass
@@ -49,7 +49,7 @@
   &__list
     letter-spacing: 1.3px
     margin-bottom: 20px
-  &__item 
+  &__item
     margin-top: 15px
     color: $primary
     font-weight: lighter
@@ -58,8 +58,9 @@
     max-width: 100%
     margin: auto
     margin-top: 180px
-    background-color: #fff  
+    background-color: #fff
   &__images
-    &-wrapper 
-      margin-top: 40px  
-
+    &-wrapper
+      max-width: 60%
+      margin: auto
+      margin-top: 40px
