--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -15,6 +15,7 @@
     margin: 0
     padding: 0
     list-style: none
+    text-transform: uppercase
     display: flex
     justify-content: space-between
   &__item
@@ -38,10 +39,12 @@
     color: $primary
     margin-bottom: 10px
     border-bottom: 1px solid rgba(25, 60, 88, 0.3)
-// .show
-//   display: flex
-//   padding: 14px 20px
-//   flex-direction: column
-//   position: absolute
-//   background-color: #fff
-//   z-index: 99
+  &:hover
+    display: block
+.show
+  display: flex
+  padding: 14px 20px
+  flex-direction: column
+  position: absolute
+  background-color: #fff
+  z-index: 99
