fixed: sections geography & navbar

--- a/sass/blocks/_company.sass
+++ b/sass/blocks/_company.sass
@@ -15,11 +15,6 @@
     margin: auto
     margin-bottom: 20px
     border-color: hsla(206, 56, 22, .2)
-  &__image
-    height: 600px
-    object-fit: cover
-    &-wrapper
-      max-width: 500px
   &__wrapper
     position: relative
     display: flex
@@ -27,7 +22,7 @@
     gap: 20px
   &__text
     font-style: normal
-    font-weight: lighter
+    // font-weight: lighter
     font-size: 15px
     color: #48555B
     letter-spacing: 1.5px
@@ -52,7 +47,7 @@
   &__item
     margin-top: 15px
     color: $primary
-    font-weight: lighter
+    // font-weight: lighter
   &__info
     padding: 20px
     max-width: 100%
