--- a/sass/blocks/_geography.sass
+++ b/sass/blocks/_geography.sass
@@ -41,3 +41,12 @@
   &__modal
     &-title
       font-size: 14px
+
+.geography__map-container:hover
+  width:  3.85%
+  filter:  sepia(51%) 
+  transition: 0.5s
+
+.geography__map-container:hover .geography__map-modal
+  display: block
+  
