--- a/css/style.css
+++ b/css/style.css
@@ -44,8 +44,7 @@ h1 {
  * 2. Show the overflow in Edge and IE.
  */
 hr {
-  -webkit-box-sizing: content-box;
-          box-sizing: content-box;
+  box-sizing: content-box;
   /* 1 */
   height: 0;
   /* 1 */
@@ -82,8 +81,7 @@ abbr[title] {
   /* 1 */
   text-decoration: underline;
   /* 2 */
-  -webkit-text-decoration: underline dotted;
-          text-decoration: underline dotted;
+  text-decoration: underline dotted;
   /* 2 */
 }
 
@@ -230,8 +228,7 @@ fieldset {
  *    `fieldset` elements in all browsers.
  */
 legend {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   /* 1 */
   color: inherit;
   /* 2 */
@@ -265,8 +262,7 @@ textarea {
  */
 [type="checkbox"],
 [type="radio"] {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   /* 1 */
   padding: 0;
   /* 2 */
@@ -342,12 +338,10 @@ template {
 }
 
 * {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   font-family: 'Open Sans', sans-serif;
   margin: 0;
-  -webkit-font-feature-settings: "locl" 0;
-          font-feature-settings: "locl" 0;
+  font-feature-settings: "locl" 0;
   line-height: 1.7;
 }
 
@@ -385,13 +379,11 @@ img {
     color: #2291E5;
   }
   button {
-    -webkit-transition: 0.4s;
     transition: 0.4s;
   }
   button:hover, button:focus {
     outline: none;
-    -webkit-box-shadow: 0 0 12px white;
-            box-shadow: 0 0 12px white;
+    box-shadow: 0 0 12px white;
     color: #fff;
   }
 }
@@ -414,15 +406,9 @@ img {
 .header-container {
   max-width: 1170px;
   margin: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .header__logo {
@@ -438,12 +424,8 @@ img {
   padding: 0;
   list-style: none;
   text-transform: uppercase;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
 
 .navbar__item {
@@ -458,6 +440,15 @@ img {
   text-decoration: none;
   color: #183B56;
   font-size: 14px;
+}
+
+.navbar__item:hover .dropdown {
+  display: flex;
+  padding: 14px 20px;
+  flex-direction: column;
+  position: absolute;
+  background-color: #fff;
+  z-index: 99;
 }
 
 .menu-button {
@@ -477,24 +468,6 @@ img {
   border-bottom: 1px solid rgba(25, 60, 88, 0.3);
 }
 
-.dropdown:hover {
-  display: block;
-}
-
-.show {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding: 14px 20px;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  position: absolute;
-  background-color: #fff;
-  z-index: 99;
-}
-
 .hero {
   background: url("../img/");
   background-image: url("../img/hero-bg-1.png");
@@ -510,13 +483,9 @@ img {
 
 .hero__wrapper {
   height: 500px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  align-content: center;
+  flex-wrap: wrap;
   padding: 40px;
 }
 
@@ -531,15 +500,13 @@ img {
   border-color: rgba(255, 255, 255, 0.3);
   margin-bottom: 20px;
   text-shadow: 1px 1px #000;
-  -ms-flex-preferred-size: 100%;
-      flex-basis: 100%;
+  flex-basis: 100%;
   max-width: 1200px;
 }
 
 .hero__span {
   display: block;
-  -ms-flex-preferred-size: 100%;
-      flex-basis: 100%;
+  flex-basis: 100%;
   color: rgba(255, 255, 255, 0.7);
   font-style: normal;
   font-weight: 400;
@@ -581,8 +548,7 @@ img {
   max-width: 150px;
   margin-left: 50px;
   background-color: transparent;
-  -webkit-box-shadow: none;
-          box-shadow: none;
+  box-shadow: none;
 }
 
 .about {
@@ -607,26 +573,18 @@ img {
 }
 
 .about__wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  justify-content: space-between;
+  align-items: flex-start;
   margin-bottom: 50px;
 }
 
 .about__image {
-  -ms-flex-preferred-size: 60%;
-      flex-basis: 60%;
+  flex-basis: 60%;
 }
 
 .about__description {
-  -ms-flex-preferred-size: 40%;
-      flex-basis: 40%;
+  flex-basis: 40%;
   text-align: left;
 }
 
@@ -678,8 +636,7 @@ img {
   background: rgba(255, 255, 255, 0.76);
   margin-bottom: 30px;
   text-align: center;
-  -webkit-filter: drop-shadow(15px 10px 14px #183B56);
-          filter: drop-shadow(15px 10px 14px #183B56);
+  filter: drop-shadow(15px 10px 14px #183B56);
 }
 
 .subscribe__link {
@@ -754,6 +711,16 @@ img {
   font-size: 14px;
 }
 
+.geography__map-container:hover {
+  width: 3.85%;
+  filter: sepia(51%);
+  transition: 0.5s;
+}
+
+.geography__map-container:hover .geography__map-modal {
+  display: block;
+}
+
 .footer {
   padding: 70px 0 70px 0;
   background-color: #183B56;
@@ -767,15 +734,9 @@ img {
 }
 
 .footer__menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  justify-content: space-between;
+  align-items: flex-start;
 }
 
 .footer__menu-title {
@@ -796,17 +757,13 @@ img {
 }
 
 .footer__info {
-  -ms-flex-preferred-size: 250px;
-      flex-basis: 250px;
+  flex-basis: 250px;
 }
 
 .footer__nav {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (25%)[4];
-      grid-template-columns: repeat(4, 25%);
-  -webkit-column-gap: 15px;
-          column-gap: 15px;
+  grid-template-columns: repeat(4, 25%);
+  column-gap: 15px;
 }
 
 .footer__title {
@@ -842,8 +799,6 @@ img {
   margin-top: 10px;
   font-family: 'Open Sans', sans-serif;
   margin-right: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 
@@ -868,8 +823,7 @@ img {
   visibility: hidden;
   width: 100%;
   background-color: #FFFFFF;
-  -webkit-box-shadow: 10px 16px 48px rgba(0, 0, 0, 0.16);
-          box-shadow: 10px 16px 48px rgba(0, 0, 0, 0.16);
+  box-shadow: 10px 16px 48px rgba(0, 0, 0, 0.16);
   overflow: hidden;
 }
 
@@ -890,16 +844,9 @@ img {
 }
 
 .mobile__nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .mobile__image {
@@ -915,8 +862,6 @@ img {
 }
 
 .breadcrumb-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   list-style: none;
   padding: 15px 0;
@@ -955,38 +900,21 @@ img {
   text-transform: uppercase;
   color: #183B56;
   border-bottom: 1px solid;
-  max-width: -webkit-max-content;
-  max-width: -moz-max-content;
   max-width: max-content;
   margin: auto;
   margin-bottom: 20px;
   border-color: rgba(25, 60, 88, 0.2);
 }
 
-.company__image {
-  height: 600px;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-.company__image-wrapper {
-  max-width: 500px;
-}
-
 .company__wrapper {
   position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   gap: 20px;
 }
 
 .company__text {
   font-style: normal;
-  font-weight: lighter;
   font-size: 15px;
   color: #48555B;
   letter-spacing: 1.5px;
@@ -996,11 +924,8 @@ img {
   max-width: 75%;
   position: absolute;
   padding: 15px;
-  -webkit-filter: drop-shadow(1px 1px 10px #183B56);
-          filter: drop-shadow(1px 1px 10px #183B56);
+  filter: drop-shadow(1px 1px 10px #183B56);
   background-color: #fff;
-  height: -webkit-max-content;
-  height: -moz-max-content;
   height: max-content;
   bottom: -125px;
   text-align: center;
@@ -1022,7 +947,6 @@ img {
 .company__item {
   margin-top: 15px;
   color: #183B56;
-  font-weight: lighter;
 }
 
 .company__info {
@@ -1075,12 +999,8 @@ img {
   max-width: 40%;
   margin: auto;
   margin-top: 30px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   grid-gap: 30px;
 }
 
@@ -1123,25 +1043,19 @@ img {
 }
 
 .method-msi__slide {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   width: 1100px;
 }
 
 .method-msi__images {
-  -ms-flex-preferred-size: 50%;
-      flex-basis: 50%;
+  flex-basis: 50%;
   margin-right: 10px;
   margin-left: 25px;
 }
 
 .method-msi__text-wrapper {
-  -ms-flex-preferred-size: 55%;
-      flex-basis: 55%;
+  flex-basis: 55%;
   margin-right: 15px;
 }
 
@@ -1187,25 +1101,18 @@ img {
 
 .contacts__icon {
   width: 30px;
-  -webkit-filter: invert(27%) sepia(51%) saturate(2878%) hue-rotate(148deg) brightness(55%) contrast(97%);
-          filter: invert(27%) sepia(51%) saturate(2878%) hue-rotate(148deg) brightness(55%) contrast(97%);
+  filter: invert(27%) sepia(51%) saturate(2878%) hue-rotate(148deg) brightness(55%) contrast(97%);
 }
 
 .contacts__map-blocks {
-  -ms-flex-preferred-size: 50%;
-      flex-basis: 50%;
+  flex-basis: 50%;
 }
 
 .contacts__blocks {
   padding: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+  flex-wrap: wrap;
+  align-items: baseline;
   height: 250px;
   border: 1px solid rgba(25, 60, 88, 0.2);
   border-radius: 4px;
@@ -1213,15 +1120,9 @@ img {
 }
 
 .contacts__blocks-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-preferred-size: 50%;
-      flex-basis: 50%;
+  flex-direction: column;
+  flex-basis: 50%;
   margin-bottom: 20px;
 }
 
@@ -1244,11 +1145,8 @@ img {
   height: 100%;
   margin-top: 30px;
   max-width: 539px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   padding: 20px;
   border: 1px solid rgba(25, 60, 88, 0.2);
   margin-top: 30px;
@@ -1259,54 +1157,36 @@ img {
 }
 
 .contacts__content {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: flex-start;
+  justify-content: space-between;
   gap: 20px;
 }
 
 .contacts__input-group {
   margin-bottom: 5px;
-  -ms-flex-preferred-size: 48%;
-      flex-basis: 48%;
+  flex-basis: 48%;
 }
 
 .contacts__input-group:hover {
-  -webkit-box-shadow: 0 0 7px #183B56;
-          box-shadow: 0 0 7px #183B56;
-  -webkit-transition: 0.3s;
+  box-shadow: 0 0 7px #183B56;
   transition: 0.3s;
 }
 
 .contacts__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -ms-flex-preferred-size: 100%;
-      flex-basis: 100%;
+  align-items: center;
+  justify-content: space-between;
+  flex-basis: 100%;
 }
 
 .contacts__form-group {
-  -ms-flex-preferred-size: 50%;
-      flex-basis: 50%;
+  flex-basis: 50%;
   height: 450px;
 }
 
 .contacts__message {
-  -ms-flex-preferred-size: 100%;
-      flex-basis: 100%;
+  flex-basis: 100%;
   height: 262px;
   padding: 18px 23px;
   resize: none;
@@ -1358,8 +1238,7 @@ img {
 }
 
 .contacts__button:hover {
-  -webkit-box-shadow: 0 0 12px #193c58;
-          box-shadow: 0 0 12px #193c58;
+  box-shadow: 0 0 12px #193c58;
   color: #183B56;
 }
 
@@ -1399,21 +1278,13 @@ img {
   color: #183B56;
   margin: auto;
   border-bottom: 1px solid rgba(25, 60, 88, 0.3);
-  max-width: -webkit-max-content;
-  max-width: -moz-max-content;
   max-width: max-content;
 }
 
 .methods-slide {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-evenly;
+  align-items: center;
   margin: auto;
   width: 960px;
 }
@@ -1430,8 +1301,7 @@ img {
 }
 
 .methods__text-wrapper {
-  -ms-flex-preferred-size: 60%;
-      flex-basis: 60%;
+  flex-basis: 60%;
 }
 
 .methods__text-title {
@@ -1477,20 +1347,20 @@ img {
   font-size: 15px;
   color: #183B56;
   margin-left: 10px;
-  margin-top: 15px;
+  margin-top: 25px;
+  padding-top: 15px;
 }
 
 .technologies__text {
   margin-top: 20px;
   background-color: #fff;
   font-style: normal;
-  font-weight: lighter;
   font-size: 15px;
   color: #48555B;
   letter-spacing: 1.5px;
   border-left: 2px solid;
   border-color: rgba(25, 60, 88, 0.5);
-  padding-left: 10px;
+  padding: 10px;
 }
 
 .technologies__main-wrapper {
@@ -1500,8 +1370,8 @@ img {
 }
 
 .technologies__image {
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
+  height: 350px;
 }
 
 .technologies__info {
@@ -1509,21 +1379,16 @@ img {
 }
 
 .technologies__images-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  gap: 20px;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
 }
 
 .technologies__image-wrapper {
-  width: 300px;
-  height: 150px;
+  margin-top: 20px;
+  margin-bottom: 30px;
+  width: 25%;
 }
 
 @media (max-width: 1200px) {
@@ -1572,23 +1437,16 @@ img {
     height: 500px;
   }
   .about__wrapper {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
   .about__wrapper--text {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     max-width: 100%;
     margin-right: 0;
   }
   .about__wrapper--images {
     width: 100%;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    justify-content: center;
     margin-top: 50px;
   }
   .about__description {
@@ -1596,8 +1454,7 @@ img {
     font-size: 18px;
   }
   .footer__nav {
-    -ms-grid-columns: (50%)[2];
-        grid-template-columns: repeat(2, 50%);
+    grid-template-columns: repeat(2, 50%);
     row-gap: 40px;
   }
   .footer__text {
@@ -1608,8 +1465,7 @@ img {
     max-width: 50%;
   }
   .contacts__input-group {
-    -ms-flex-preferred-size: 100%;
-        flex-basis: 100%;
+    flex-basis: 100%;
   }
   .contacts__text, .contacts__link {
     font-size: 12px;
@@ -1641,22 +1497,13 @@ img {
     display: none;
   }
   .menu-button {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     width: 16px;
     height: 11px;
     padding: 0;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
     border: none;
     cursor: pointer;
     outline: none;
@@ -1709,10 +1556,7 @@ img {
     max-width: 260px;
   }
   .main-info__container {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
   .main-info__right-side {
     margin-top: 20px;
@@ -1729,8 +1573,7 @@ img {
     font-size: 18px;
   }
   .contacts__content {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    flex-wrap: wrap;
     padding-left: 20px;
     padding-right: 20px;
   }
@@ -1739,9 +1582,7 @@ img {
     margin-right: 0;
   }
   .contacts__address-wrapper {
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
+    justify-content: space-evenly;
   }
   .map {
     width: 100%;
@@ -1811,8 +1652,7 @@ img {
 
 @media (max-width: 476px) {
   .footer__nav {
-    -ms-grid-columns: (250px)[1];
-        grid-template-columns: repeat(1, 250px);
+    grid-template-columns: repeat(1, 250px);
     row-gap: 40px;
   }
   .contacts__title {
@@ -1862,8 +1702,7 @@ img {
     margin-right: 0;
   }
   .about__wrapper--text {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    flex-wrap: wrap;
   }
   .about__link {
     font-size: 11px;
@@ -1877,8 +1716,7 @@ img {
     padding-top: 0;
   }
   .contacts__container {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    flex-wrap: wrap;
   }
   .contacts__button {
     margin-bottom: 10px;
