--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -26,6 +26,14 @@
     text-decoration: none
     color: $primary
     font-size: 14px
+    
+.navbar__item:hover .dropdown 
+  display: flex
+  padding: 14px 20px
+  flex-direction: column
+  position: absolute
+  background-color: #fff
+  z-index: 99 
 
 .menu-button
   display: none
@@ -39,12 +47,4 @@
     color: $primary
     margin-bottom: 10px
     border-bottom: 1px solid rgba(25, 60, 88, 0.3)
-  &:hover
-    display: block
-.show
-  display: flex
-  padding: 14px 20px
-  flex-direction: column
-  position: absolute
-  background-color: #fff
-  z-index: 99
+  
