--- a/sass/blocks/_technologies.sass
+++ b/sass/blocks/_technologies.sass
@@ -18,31 +18,35 @@
       font-size: 15px
       color: $primary
       margin-left: 10px
-      margin-top: 15px
+      margin-top: 25px
+      padding-top: 15px
   &__text
     margin-top: 20px
     background-color: #fff
     font-style: normal
-    font-weight: lighter
+    // font-weight: lighter
     font-size: 15px
     color: #48555B
     letter-spacing: 1.5px
     border-left: 2px solid
     border-color: hsla(206, 56, 22, .5)
-    padding-left: 10px
+    padding: 10px
   &__main-wrapper
     margin: auto
     margin-top: 20px
     max-width: 85%
   &__image
     object-fit: cover
+    height: 350px
   &__info
     background-color: #fff
   &__images-wrapper
     display: flex
     justify-content: center
     align-items: center
-    gap: 20px
+    gap: 30px
   &__image-wrapper
-    width: 300px
-    height: 150px
+    margin-top: 20px
+    margin-bottom: 30px
+    width: 25%
+    
