--- a/sass/blocks/_about.sass
+++ b/sass/blocks/_about.sass
@@ -27,7 +27,7 @@
     text-align: left
   &__text
     font-style: normal
-    font-weight: lighter
+    // font-weight: lighter
     font-size: 15px
     color: #48555B
     letter-spacing: 1.5px
@@ -41,5 +41,5 @@
     text-decoration: none
     cursor: pointer
     &:hover
-      color: #fff
+      // color: #fff
       text-shadow: 0 0 12px hsla(0,0%,100%,.8)
