--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -18,6 +18,7 @@
     text-transform: uppercase
     display: flex
     justify-content: space-between
+    
   &__item
     margin-right: 42px
     &:last-child
@@ -26,6 +27,8 @@
     text-decoration: none
     color: $primary
     font-size: 14px
+    &:hover
+      box-shadow: none
     
 .navbar__item:hover .dropdown 
   display: flex
