--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -17,11 +17,7 @@ img
   width: 100%
 
 .swiper-container
-  // max-width: 1200px
   height: 450px
-  // background-color: #fff
-
-
 
 
 .hidden
@@ -42,15 +38,16 @@ img
   a
     outline: none
     cursor: pointer
-    // transition: 0.4s
+    transition: 0.4s
     &:hover
       color: #2291E5
+      
   button
     transition: 0.4s
     &:hover, &:focus
       outline: none
-      box-shadow: 0 0 12px hsla(0,0%,100%,1)
-      color: #fff
+      box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19)
+      // color: #fff
 
 .overlay
   position: fixed
