--- a/sass/blocks/_geography.sass
+++ b/sass/blocks/_geography.sass
@@ -9,7 +9,6 @@
     font-weight: bold
     font-size: 22px
     color: $primary
-    // text-decoration: underline
     border-bottom: 1px solid hsla(206, 56, 22 , .3 )
     max-width: 350px
     margin: auto
@@ -18,32 +17,53 @@
     position: relative
   &__map-container
     position: absolute
-    width: 3%
-    &--komi
+    width: 2.2%
+    
+    &--yamburg
       top: 50%
-      left: 50%
+      left: 43%
+    &--zapolarka
+      top: 53%
+      left: 46%
     &--sahalin
-      top: 20%
-      left: 80%
+      top: 50%
+      right: 30%
+
+    &--tatarstan
+      top: 67%
+      left: 24%
+    &--orenburg
+      top: 75%
+      left: 24%
+    &--samara
+      top: 70%
+      left: 21%
+    &--neneckiy
+      top: 40%
+      left: 31%
   &__map-modal
     position: absolute
     left: 100%
     bottom: 100%
     background: #fff
-    max-width: 150px
+    min-width: 120px
     padding: 5px
     display: none
     z-index: 10
     margin-bottom: 10px
     border: 1px solid #004a8d
+    text-align: center  
     &--open
       display: block
   &__modal
     &-title
-      font-size: 14px
+      font-size: 13px
+      width: fit-content
+      text-align: center 
 
+      
 .geography__map-container:hover
-  width:  3.85%
+  width:  3%
   filter:  sepia(51%) 
   transition: 0.5s
 
