--- a/sass/blocks/_methods.sass
+++ b/sass/blocks/_methods.sass
@@ -12,22 +12,21 @@
     color: $primary
     margin: auto
     border-bottom: 1px solid hsla(206, 56, 22 , .3 )
-    max-width: max-content
-    
+    max-width: max-content 
   &-slide
     display: flex
     justify-content: space-evenly
     align-items: center
     margin: auto
     width: 960px
-
   &__image-wrapper
     max-width: 350px
     position: relative
   &__text
     line-height: 2.7
     margin-bottom: 20px
-    letter-spacing: -0.5px;
+    font-size: 14px
+    font-style: italic
     &-wrapper
       flex-basis: 60%
     &-title
@@ -43,3 +42,5 @@
     text-decoration: none
     cursor: pointer
     border-radius: 4px
+    &:hover
+      box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
