fixed: fixed everything

--- a/sass/blocks/_about.sass
+++ b/sass/blocks/_about.sass
@@ -41,5 +41,7 @@
     text-decoration: none
     cursor: pointer
     &:hover
-      // color: #fff
+      box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19)
       text-shadow: 0 0 12px hsla(0,0%,100%,.8)
+      color: #ffffbc
+      background-color: #023047
