--- a/sass/blocks/_technologies.sass
+++ b/sass/blocks/_technologies.sass
@@ -31,6 +31,8 @@
     border-left: 2px solid
     border-color: hsla(206, 56, 22, .5)
     padding: 10px
+    &--main
+      text-align: center
   &__main-wrapper
     margin: auto
     margin-top: 20px
@@ -49,4 +51,3 @@
     margin-top: 20px
     margin-bottom: 30px
     width: 25%
-    
