--- a/sass/style.sass
+++ b/sass/style.sass
@@ -35,7 +35,7 @@
 @import 'blocks/_company'
 
 //styles for grp, msi and svan
-@import 'blocks/_method-msi'
+@import 'blocks/_method-svan'
 
 //styles for contact-page
 @import 'blocks/_contacts'
