--- a/css/style.css
+++ b/css/style.css
@@ -346,7 +346,7 @@ template {
 }
 
 body {
-  background-color: rgba(191, 191, 191, 0.2);
+  background-color: #f2f6fd;
 }
 
 h1, h2, h3, h4 {
@@ -384,7 +384,7 @@ img {
   }
   button:hover, button:focus {
     outline: none;
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2), 0 2px 8px 0 rgba(0, 0, 0, 0.19);
   }
 }
 
@@ -611,7 +611,10 @@ img {
 }
 
 .about__button:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   text-shadow: 0 0 12px rgba(255, 255, 255, 0.8);
+  color: #ffffbc;
+  background-color: #023047;
 }
 
 .subscribe {
@@ -626,6 +629,11 @@ img {
   margin: auto;
   max-width: 300px;
   text-align: center;
+  min-height: 150px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .subscribe__title {
@@ -671,6 +679,7 @@ img {
   max-width: 350px;
   margin: auto;
   margin-bottom: 20px;
+  text-align: center;
 }
 
 .geography-wrapper {
@@ -693,8 +702,8 @@ img {
 }
 
 .geography__map-container--sahalin {
-  top: 50%;
-  right: 30%;
+  top: 65%;
+  right: 7%;
 }
 
 .geography__map-container--tatarstan {
@@ -717,38 +726,49 @@ img {
   left: 31%;
 }
 
+.geography__map-container--komi {
+  top: 50%;
+  left: 31%;
+}
+
 .geography__map-modal {
   position: absolute;
   left: 100%;
   bottom: 100%;
   background: #fff;
-  min-width: 120px;
+  min-width: 220px;
   padding: 5px;
-  display: none;
   z-index: 10;
   margin-bottom: 10px;
   border: 1px solid #004a8d;
-  text-align: center;
-}
-
-.geography__map-modal--open {
-  display: block;
+  text-align: -webkit-center;
+  display: none;
 }
 
 .geography__modal-title {
   font-size: 13px;
-  width: fit-content;
-  text-align: center;
+  min-width: fit-content;
+}
+
+.geography__text {
+  color: #2291E5;
+  font-size: 14px;
 }
 
 .geography__map-container:hover {
   width: 3%;
-  filter: sepia(51%);
   transition: 0.5s;
+}
+
+.geography__map-link:hover {
+  filter: grayscale(0.2) saturate(2);
+  transition: 0.5s;
+  border: 1px solid white;
 }
 
 .geography__map-container:hover .geography__map-modal {
   display: block;
+  filter: 3px;
 }
 
 .footer {
@@ -841,6 +861,10 @@ img {
   text-decoration: none;
   font-family: 'Open Sans', sans-serif;
   cursor: pointer;
+}
+
+.footer__link:hover {
+  color: #ffffbc;
 }
 
 .mobile {
@@ -1018,7 +1042,6 @@ img {
   margin-top: 20px;
   background-color: #fff;
   font-style: normal;
-  font-weight: lighter;
   font-size: 15px;
   color: #48555B;
   padding: 20px;
@@ -1046,7 +1069,6 @@ img {
   text-decoration: none;
   background-color: #fff;
   color: #183B56;
-  font-weight: lighter;
   letter-spacing: 2px;
   padding-left: 30px;
 }
@@ -1095,8 +1117,9 @@ img {
 }
 
 .method-msi__description {
-  color: #183B56;
-  font-weight: lighter;
+  font-style: italic;
+  font-size: 14px;
+  max-width: 90%;
 }
 
 .contacts {
@@ -1146,7 +1169,7 @@ img {
   height: 250px;
   border: 1px solid rgba(25, 60, 88, 0.2);
   border-radius: 4px;
-  background-color: rgba(250, 250, 250, 0.7);
+  background-color: #fff;
 }
 
 .contacts__blocks-wrapper {
@@ -1181,7 +1204,7 @@ img {
   border: 1px solid rgba(25, 60, 88, 0.2);
   margin-top: 30px;
   gap: 19px;
-  background-color: rgba(250, 250, 250, 0.7);
+  background-color: #fff;
   margin-right: 20px;
   border-radius: 4px;
 }
@@ -1230,10 +1253,6 @@ img {
   background-color: transparent;
 }
 
-.contacts__message:hover {
-  background-color: #fff;
-}
-
 .contacts__input {
   padding: 20px 18px;
   border-radius: 4px;
@@ -1245,10 +1264,6 @@ img {
   width: 100%;
   border: 1px solid rgba(25, 60, 88, 0.2);
   background-color: transparent;
-}
-
-.contacts__input:hover {
-  background-color: #fff;
 }
 
 .contacts__button {
@@ -1337,6 +1352,7 @@ img {
 
 .methods__text-title {
   margin-bottom: 20px;
+  font-style: italic;
 }
 
 .methods__button {
@@ -1396,6 +1412,10 @@ img {
   border-left: 2px solid;
   border-color: rgba(25, 60, 88, 0.5);
   padding: 10px;
+}
+
+.technologies__text--main {
+  text-align: center;
 }
 
 .technologies__main-wrapper {
