--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -7,7 +7,7 @@
 
 body
   // background-color: rgba(236,240,241,.2)
-  background-color: rgba(191,191,191,.2)
+  background-color: #f2f6fd
 
 h1, h2, h3, h4
   margin: 0
@@ -18,7 +18,6 @@ img
 
 .swiper-container
   height: 450px
-
 
 .hidden
   overflow: hidden
@@ -41,12 +40,12 @@ img
     transition: 0.4s
     &:hover
       color: #2291E5
-      
+
   button
     transition: 0.4s
     &:hover, &:focus
       outline: none
-      box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19)
+      box-shadow: 0 2px 8px 0 rgba(0,0,0,0.2), 0 2px 8px 0 rgba(0,0,0,0.19)
       // color: #fff
 
 .overlay
