--- a/sass/blocks/_geography.sass
+++ b/sass/blocks/_geography.sass
@@ -13,12 +13,12 @@
     max-width: 350px
     margin: auto
     margin-bottom: 20px
+    text-align: center
   &-wrapper
     position: relative
   &__map-container
     position: absolute
     width: 2.2%
-    
     &--yamburg
       top: 50%
       left: 43%
@@ -26,9 +26,8 @@
       top: 53%
       left: 46%
     &--sahalin
-      top: 50%
-      right: 30%
-
+      top: 65%
+      right: 7%
     &--tatarstan
       top: 67%
       left: 24%
@@ -41,32 +40,39 @@
     &--neneckiy
       top: 40%
       left: 31%
+    &--komi
+      top: 50%
+      left: 31%
   &__map-modal
     position: absolute
     left: 100%
     bottom: 100%
     background: #fff
-    min-width: 120px
+    min-width: 220px
     padding: 5px
-    display: none
     z-index: 10
     margin-bottom: 10px
     border: 1px solid #004a8d
-    text-align: center  
-    &--open
-      display: block
+    text-align: -webkit-center
+    display: none
+
   &__modal
     &-title
       font-size: 13px
-      width: fit-content
-      text-align: center 
+      min-width: fit-content
+  &__text
+    color: #2291E5
+    font-size: 14px
 
-      
 .geography__map-container:hover
-  width:  3%
-  filter:  sepia(51%) 
+  width: 3%
   transition: 0.5s
+
+.geography__map-link:hover
+  filter: grayscale(0.2) saturate(2)
+  transition: 0.5s
+  border: 1px solid white
 
 .geography__map-container:hover .geography__map-modal
   display: block
-  
+  filter: 3px
