--- a/sass/blocks/_method-svan.sass
+++ b/sass/blocks/_method-svan.sass
@@ -17,7 +17,6 @@
     margin-top: 20px
     background-color: #fff
     font-style: normal
-    font-weight: lighter
     font-size: 15px
     color: #48555B
     padding: 20px
@@ -31,7 +30,7 @@
     grid-gap: 30px
   &__link
     text-decoration: none
-    color: blue 
+    color: blue
   &__list
     margin-top: 20px
     padding: 28px
@@ -39,15 +38,15 @@
     text-decoration: none
     background-color: #fff
     color: $primary
-    font-weight: lighter
+
     letter-spacing: 2px
-    padding-left: 30px   
+    padding-left: 30px
     // border: 1px solid $primary
     &-title
       margin-bottom: 15px
       color: $primary
-      letter-spacing: 2px 
-  &__comment 
+      letter-spacing: 2px
+  &__comment
     margin-top: 7px
     display: block
     font-style: italic
@@ -56,12 +55,12 @@
     text-align: center
   &__results
     padding: 28px
-    margin-top: 20px 
+    margin-top: 20px
     background-color: #fff
   &__slide
     display: flex
     align-items: center
-    width: 1100px 
+    width: 1100px
   &__images
     flex-basis: 50%
     margin-right: 10px
@@ -69,10 +68,10 @@
   &__text-wrapper
     flex-basis: 55%
     margin-right: 15px
-  &__text-title 
+  &__text-title
     margin-bottom: 30px
     font-weight: bold
   &__description
-    color: $primary
-    font-weight: lighter
-    
+    font-style: italic
+    font-size: 14px
+    max-width: 90%
