--- a/sass/blocks/_methods.sass
+++ b/sass/blocks/_methods.sass
@@ -12,7 +12,7 @@
     color: $primary
     margin: auto
     border-bottom: 1px solid hsla(206, 56, 22 , .3 )
-    max-width: max-content 
+    max-width: max-content
   &-slide
     display: flex
     justify-content: space-evenly
@@ -27,10 +27,12 @@
     margin-bottom: 20px
     font-size: 14px
     font-style: italic
+
     &-wrapper
       flex-basis: 60%
     &-title
       margin-bottom: 20px
+      font-style: italic
   &__button
     background-color: transparent
     border: 0.5px solid $primary
@@ -43,4 +45,4 @@
     cursor: pointer
     border-radius: 4px
     &:hover
-      box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+      box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19)
