--- a/sass/blocks/_subscribe.sass
+++ b/sass/blocks/_subscribe.sass
@@ -8,6 +8,11 @@
     margin: auto
     max-width: 300px
     text-align: center
+    min-height: 150px
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: center
   &__title
     padding: 5px
     font-style: normal
