--- a/sass/blocks/_technologies.sass
+++ b/sass/blocks/_technologies.sass
@@ -25,14 +25,16 @@
     background-color: #fff
     font-style: normal
     // font-weight: lighter
-    font-size: 15px
+    font-size: 14px
     color: #48555B
     letter-spacing: 1.5px
     border-left: 2px solid
     border-color: hsla(206, 56, 22, .5)
     padding: 10px
-    &--main
+    &--center
       text-align: center
+      border: none
+      font-size: 17px
   &__main-wrapper
     margin: auto
     margin-top: 20px
