--- a/sass/style.sass
+++ b/sass/style.sass
@@ -37,6 +37,9 @@
 //styles for grp, msi and svan
 @import 'blocks/_method-svan'
 
+//styles for grp
+@import 'blocks/_method-grp'
+
 //styles for contact-page
 @import 'blocks/_contacts'
 
