--- a/sass/blocks/_method-grp.sass
+++ b/sass/blocks/_method-grp.sass
@@ -1,4 +1,4 @@
-.method-msi
+.method-grp
   padding-top: 10px
   padding-bottom: 30px
   &__container
@@ -63,7 +63,8 @@
     width: 1100px
   &__images
     flex-basis: 50%
-    margin-right: 20px
+    margin-right: 10px
+    margin-left: 25px
   &__text-wrapper
     flex-basis: 55%
     margin-right: 15px
@@ -74,6 +75,3 @@
     font-style: italic
     font-size: 14px
     max-width: 90%
-  &__image
-    object-fit: cover
-    height: 360px
