--- a/sass/blocks/_methods.sass
+++ b/sass/blocks/_methods.sass
@@ -20,14 +20,17 @@
     margin: auto
     width: 960px
   &__image-wrapper
+    max-height: 500px
     max-width: 350px
     position: relative
+  &__image
+    // border-radius: 25px
+    object-fit: cover
   &__text
     line-height: 2.7
     margin-bottom: 20px
     font-size: 14px
     font-style: italic
-
     &-wrapper
       flex-basis: 60%
     &-title
