--- a/sass/blocks/_method-svan.sass
+++ b/sass/blocks/_method-svan.sass
@@ -30,20 +30,21 @@
     grid-gap: 30px
   &__link
     text-decoration: none
-    color: blue
+    color: $primary
+    font-weight: bolder
   &__list
     margin-top: 20px
-    padding: 28px
-    padding-top: 25px
+    padding: 20px
     text-decoration: none
     background-color: #fff
     color: $primary
-
     letter-spacing: 2px
-    padding-left: 30px
-    // border: 1px solid $primary
+    padding-left: 36px
+    font-size: 15px
     &-title
+      font-size: 16px
       margin-bottom: 15px
+      font-weight: bolder
       color: $primary
       letter-spacing: 2px
   &__comment
@@ -54,7 +55,8 @@
     color: #495057
     text-align: center
   &__results
-    padding: 28px
+    padding-left: 36px
+    padding-top: 20px
     margin-top: 20px
     background-color: #fff
   &__slide
