--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -18,7 +18,6 @@
     text-transform: uppercase
     display: flex
     justify-content: space-between
-
   &__item
     margin-right: 42px
     &:last-child
@@ -37,6 +36,9 @@
   position: absolute
   background-color: #fff
   z-index: 99
+
+// .dropdown__link:hover
+//   background-color: #dee2e6
 
 .menu-button
   display: none
