--- a/sass/blocks/_method-grp.sass
+++ b/sass/blocks/_method-grp.sass
@@ -21,31 +21,36 @@
     color: #48555B
     padding: 20px
     letter-spacing: 1.5px
-  &__image-wrapper
-    max-width: 40%
-    margin: auto
-    margin-top: 30px
-    display: flex
-    justify-content: center
-    grid-gap: 30px
+  &__image
+    object-fit: cover
+    &-wrapper
+      max-width: 40%
+      margin: auto
+      margin-top: 30px
+      display: flex
+      justify-content: center
+      align-items: center
+      grid-gap: 30px
   &__link
     text-decoration: none
     color: blue
   &__list
     margin-top: 20px
-    padding: 28px
-    padding-top: 25px
+    padding: 20px
     text-decoration: none
     background-color: #fff
     color: $primary
-
     letter-spacing: 2px
-    padding-left: 30px
-    // border: 1px solid $primary
+    padding-left: 36px
+    font-size: 15px
     &-title
+      font-size: 16px
       margin-bottom: 15px
+      font-weight: bolder
       color: $primary
       letter-spacing: 2px
+  &__item
+    margin-bottom: 10px
   &__comment
     margin-top: 7px
     display: block
@@ -54,7 +59,8 @@
     color: #495057
     text-align: center
   &__results
-    padding: 28px
+    padding-left: 36px
+    padding-top: 20px
     margin-top: 20px
     background-color: #fff
   &__slide
