--- a/sass/style.sass
+++ b/sass/style.sass
@@ -49,5 +49,8 @@
 //styles for technologies
 @import 'blocks/_technologies'
 
+//styles for thankyou
+@import 'blocks/_thankyou'
+
 //responsive
 @import '_media'
