--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -43,7 +43,7 @@
       height: 500px
   .about
     &__wrapper
-      flex-direction: column
+      // flex-direction: column
       &--text
         display: flex
         max-width: 100%
@@ -52,9 +52,15 @@
         width: 100%
         justify-content: center
         margin-top: 50px
+    &__image
+      flex-basis: 55%
+
     &__description
-      margin-right: 40px
-      font-size: 18px
+    &__text
+      font-size: 13px
+    &__button
+      font-size: 12px
+      padding: 10px
   .footer
     &__nav
       grid-template-columns: repeat(2, 50%)
@@ -129,7 +135,8 @@
         height: 200px
     &__link
       font-size: 12px
-
+    &__wrapper
+      align-items: center
   .subscribe
     &__title
       font-size: 20px
