--- a/sass/blocks/_company.sass
+++ b/sass/blocks/_company.sass
@@ -44,9 +44,12 @@
   &__list
     letter-spacing: 1.3px
     margin-bottom: 20px
+    border-left: 2px solid
+    border-color: rgba(25, 60, 88, 0.5)
   &__item
     margin-top: 15px
     color: $primary
+    font-size: 14px
     // font-weight: lighter
   &__info
     padding: 20px
