--- a/sass/blocks/_method-grp.sass
+++ b/sass/blocks/_method-grp.sass
@@ -43,6 +43,8 @@
     letter-spacing: 2px
     padding-left: 36px
     font-size: 15px
+    border-left: 2px solid
+    border-color: rgba(25, 60, 88, 0.5)
     &-title
       font-size: 16px
       margin-bottom: 15px
